[gd_scene load_steps=34 format=2]

[ext_resource path="res://Enemigo tierra/enemigo_tierra.png" type="Texture" id=1]
[ext_resource path="res://Enemigo tierra/enemigo_tierra(muerte).png" type="Texture" id=2]
[ext_resource path="res://Ecenas/Niveles/enemigos/enemigo_tierra.gd" type="Script" id=3]
[ext_resource path="res://Pirate Bomb/Sprites/7-Objects/1-BOMB/3-Explotion/1.png" type="Texture" id=4]
[ext_resource path="res://Pirate Bomb/Sprites/7-Objects/1-BOMB/3-Explotion/2.png" type="Texture" id=5]
[ext_resource path="res://Pirate Bomb/Sprites/7-Objects/1-BOMB/3-Explotion/3.png" type="Texture" id=6]
[ext_resource path="res://Pirate Bomb/Sprites/7-Objects/1-BOMB/3-Explotion/4.png" type="Texture" id=7]
[ext_resource path="res://Pirate Bomb/Sprites/7-Objects/1-BOMB/3-Explotion/5.png" type="Texture" id=8]
[ext_resource path="res://Pirate Bomb/Sprites/7-Objects/1-BOMB/3-Explotion/6.png" type="Texture" id=9]
[ext_resource path="res://Pirate Bomb/Sprites/7-Objects/1-BOMB/3-Explotion/7.png" type="Texture" id=10]
[ext_resource path="res://Pirate Bomb/Sprites/7-Objects/1-BOMB/3-Explotion/9.png" type="Texture" id=11]
[ext_resource path="res://Pirate Bomb/Sprites/7-Objects/1-BOMB/3-Explotion/8.png" type="Texture" id=12]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 38 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 38 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 38 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 38 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 32, 38 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 32, 38 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 32, 38 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 224, 0, 32, 38 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 38 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 38 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 38 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 32, 38 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 32, 38 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 160, 0, 32, 38 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 32, 38 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 2 )
region = Rect2( 224, 0, 32, 38 )

[sub_resource type="SpriteFrames" id=17]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "boom",
"speed": 10.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 12 ), ExtResource( 11 ) ],
"loop": true,
"name": "boom2",
"speed": 10.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "run",
"speed": 6.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "runX2",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=19]

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 33.5, 1.5 )

[sub_resource type="CircleShape2D" id=21]
radius = 22.0

[sub_resource type="CircleShape2D" id=22]
radius = 42.19

[node name="enemigo_tierra" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 2, -7 )
frames = SubResource( 17 )
animation = "run"
frame = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 19 )

[node name="Ray3" type="RayCast2D" parent="."]
position = Vector2( 10, 6 )
enabled = true
cast_to = Vector2( 0, 15 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 43.5, 0 )
shape = SubResource( 20 )

[node name="muerte" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="muerte"]
shape = SubResource( 21 )

[node name="hit" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hit"]
shape = SubResource( 22 )
disabled = true

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished_2"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="muerte" to="." method="_on_muerte_body_entered"]
[connection signal="body_entered" from="hit" to="." method="_on_dao_body_entered"]
